crawlab/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crawlab-ingress
  namespace: crawlab
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - crawlab.veeton.co
      secretName: crawlab-tls
  rules:
    - host: crawlab.veeton.co
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: crawlab-master-service
                port:
                  number: 8080
